fix(bindings): correct brightness control commands and update terminal app

--- a/private_dot_config/hypr/custom/bindings.conf
+++ b/private_dot_config/hypr/custom/bindings.conf
@@ -1,12 +1,12 @@
 #### Custom brightnes bindings for optimus laptops ####
-bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amd_gpu_0 s +2%
-bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amd_gpu_0 s 2%-
-
 unbind = ,XF86MonBrightnessUp, Brightness up
 unbind = ,XF86MonBrightnessDown, Brightness down
 
+bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amdgpu_bl1 s +2%
+bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amdgpu_bl1 s 2%-
+
 #### Custom apps bindings ####
-$terminal = uwsm app -- alacritty
+$terminal = uwsm app -- ghostty
 $browser = uwsm app -- brave --new-window --ozone-platform=wayland
 $webapp = $browser --app
 
