feat(hypr): add ghostty and VS Code app configurations to custom apps

--- a/private_dot_config/hypr/custom/apps.conf
+++ b/private_dot_config/hypr/custom/apps.conf
@@ -1,3 +1,5 @@
 #### Source custom apps configs ####
 source = ~/.config/hypr/custom/apps/brave.conf
 source = ~/.config/hypr/custom/apps/jetbrains.conf
+source = ~/.config/hypr/custom/apps/ghostty.conf
+source = ~/.config/hypr/custom/apps/code.conf
