--- a/private_dot_config/hypr/custom/bindings.conf
+++ b/private_dot_config/hypr/custom/bindings.conf
@@ -26,4 +26,4 @@ bindd = SUPER, C, Calendar, exec, $webapp="https://calendar.google.com/"
 bindd = SUPER, E, Email, exec, $webapp="https://mail.google.com/"
 bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
 bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER, Excalidraw, X, exec, $webapp="https://excalidraw.com/"
+bindd = SUPER, X, Excalidraw, exec, $webapp="https://excalidraw.com/"
