feat(hyprland): improve jetbrains ides window rules

--- a/private_dot_config/hypr/custom/apps/jetbrains.conf
+++ b/private_dot_config/hypr/custom/apps/jetbrains.conf
@@ -1,23 +1,20 @@
 # Hyprland window rules for Jetbrains
 
-# Fix all dialogs in Jetbrains products
-windowrulev2 = tag +jb, class:^jetbrains-.+$,floating:1
-windowrulev2 = stayfocused, tag:jb
-windowrulev2 = noinitialfocus, tag:jb
-windowrulev2 = focusonactivate,class:^jetbrains-(?!toolbox)
+windowrule = opacity 1, class:^(jetbrains-.*)$
 
-# center the pops excepting context menu
-windowrulev2 = move 30% 30%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
-windowrulev2 = size 40% 40%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
+# -- Fix odd behaviors in IntelliJ IDEs --
+#! Fix focus issues when dialogs are opened or closed
+# windowrulev2 = windowdance,class:^(jetbrains-.*)$,floating:1
+#! Fix splash screen showing in weird places and prevent annoying focus takeovers
+windowrulev2 = center,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
+windowrulev2 = nofocus,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
+windowrulev2 = noborder,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
 
-# Fix tooltips (always have a title of `win.<id>`)
-# Fix for sidebar menus being unclickable
-windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
-windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
-# Fix tab dragging (always have a single space character as their title)
-windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
-windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
-# Additional fixes for tab dragging
-windowrulev2 = tag +jb, class:^jetbrains-.+$,floating:1
-windowrulev2 = stayfocused, tag:jb
-windowrulev2 = noinitialfocus, tag:jb
+#! Center popups/find windows
+windowrulev2 = center,class:^(jetbrains-.*)$,title:^( )$,floating:1
+#! Enabling this makes it impossible to provide input to any popup dialogue (search window, new file, etc.)
+windowrulev2 = stayfocused,class:^(jetbrains-.*)$,title:^( )$,floating:1
+windowrulev2 = noborder,class:^(jetbrains-.*)$,title:^( )$,floating:1
+#! Disable window flicker when autocomplete or tooltips appear
+windowrulev2 = noinitialfocus,class:^(jetbrains-.*)$,title:^(win.*)$,floating:1
+# -- End of IntelliJ Rules --
