--- a/private_dot_config/hypr/custom/bindings.conf
+++ b/private_dot_config/hypr/custom/bindings.conf
@@ -6,24 +6,25 @@ bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amdgpu_bl1
 bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amdgpu_bl1 s 2%-
 
 #### Custom apps bindings ####
-$terminal = uwsm app -- ghostty
-$browser = uwsm app -- brave --new-window --ozone-platform=wayland
-$webapp = $browser --app
+$terminal = uwsm-app -- xdg-terminal-exec #Consider setting to ghostty if issues arise
+$browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, M, Music, exec, uwsm app -- youtube-music
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Discord, exec, uwsm app -- discord
-bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
-bindd = SUPER, slash, Passwords, exec, uwsm app -- keepassxc
+# Apps
+bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER SHIFT, E, File manager, exec, uwsm-app -- nautilus --new-window
+bindd = SUPER SHIFT, B, Browser, exec, $browser
+bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
+bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
+bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- bitwarden-desktop
+bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus "^obsidian$" "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
+bindd = SUPER SHIFT, G, Discord, exec, omarchy-launch-or-focus discord "uwsm-app -- discord"
 
-bindd = SUPER, A, Deepseek, exec, $webapp="https://chat.deepseek.com"
-bindd = SUPER, C, Calendar, exec, $webapp="https://calendar.google.com/"
-bindd = SUPER, E, Email, exec, $webapp="https://mail.google.com/"
-bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER, X, Excalidraw, exec, $webapp="https://excalidraw.com/"
+# WebApps
+bindd = SUPER SHIFT, A, Gemini, exec, omarchy-launch-webapp "https://gemini.google.com/"
+bindd = SUPER SHIFT ALT, A, Deepseek, exec, omarchy-launch-webapp "https://chat.deepseek.com"
+bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-or-focus-webapp Calendario "https://calendar.google.com/"
+bindd = SUPER SHIFT, H, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus-webapp "YouTube Music" "https://music.youtube.com/"
+bindd = SUPER SHIFT, X, Excalidraw, exec, omarchy-launch-webapp "https://excalidraw.com"
