fix(helix): update theme inheritance to catppuccin_mocha

--- a/private_dot_config/helix/themes/executable_hx-theme.toml
+++ b/private_dot_config/helix/themes/executable_hx-theme.toml
@@ -1,6 +1,4 @@
-inherits = "tokyonight"
-#inherits = "rose_pine"
-#inherits = "github_dark"
+inherits = "catppuccin_mocha"
 
 "ui.background" = { fg = "fg"}
 "ui.text" = { fg = "fg" }
