feat(hyprland): source davinci resolve custom rules

--- a/private_dot_config/hypr/custom/apps.conf
+++ b/private_dot_config/hypr/custom/apps.conf
@@ -3,3 +3,4 @@ source = ~/.config/hypr/custom/apps/brave.conf
 source = ~/.config/hypr/custom/apps/jetbrains.conf
 source = ~/.config/hypr/custom/apps/ghostty.conf
 source = ~/.config/hypr/custom/apps/code.conf
+source = ~/.config/hypr/custom/apps/resolve.conf
