--- a/private_dot_config/hypr/custom/bindings.conf
+++ b/private_dot_config/hypr/custom/bindings.conf
@@ -5,6 +5,9 @@ unbind = ,XF86MonBrightnessDown, Brightness down
 bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amdgpu_bl1 s +2%
 bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amdgpu_bl1 s 2%-
 
+bindeld = ,XF86MonBrightnessUp, Brightness up, exec, $osdclient --brightness +2
+bindeld = ,XF86MonBrightnessDown, Brightness down, exec, $osdclient --brightness -2
+
 #### Custom apps bindings ####
 $terminal = uwsm-app -- xdg-terminal-exec #Consider setting to ghostty if issues arise
 $browser = omarchy-launch-browser
