refactor(ghostty): reorganize configuration for clarity and update theme settings

--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -1,41 +1,40 @@
-#### Theme ####
-theme = Catppuccin Mocha
+# Dynamic theme colors
+config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
-#### Keybindings ####
-keybind = ctrl+alt+d=toggle_window_decorations 
-keybind = super+ctrl+up=goto_split:top
-keybind = super+ctrl+down=goto_split:bottom
-keybind = super+ctrl+left=goto_split:left
-keybind = super+ctrl+right=goto_split:right
-keybind = ctrl+shift+tab=next_tab
-
-#### Font type ####
+# Font
 font-family = "CaskaydiaCove NF Regular"
-font-size = 12
+font-style = Regular
+font-size = 11
 
-#### Shell integration ####
-shell-integration-features = no-cursor
+# Window
+window-theme = ghostty
+window-padding-x = 12
+window-padding-y = 12
+window-padding-balance = true
+confirm-close-surface=false
+resize-overlay = never
+gtk-toolbar-style = flat
+gtk-tabs-location = bottom
+desktop-notifications = true
 
-#### Cursor settings ####
-cursor-style = underline
+# Cursor styling
+cursor-style = "block"
 cursor-style-blink = true
 cursor-invert-fg-bg = true
 mouse-hide-while-typing = true
 
-#### Window options ####
-#background-opacity = 0.94
-window-padding-x = 10
-window-padding-y = 10
-window-padding-balance = true
-window-inherit-working-directory = true
-window-height = 35
-window-width = 110
+# Cursor styling + SSH session terminfo
+# (all shell integration options must be passed together)
+shell-integration-features = no-cursor,ssh-env
 
-#### Enable notifications ####
-desktop-notifications = true
-
-#### Tabs position ####
-gtk-tabs-location = bottom
+# Keyboard bindings
+keybind = shift+insert=paste_from_clipboard
+keybind = control+insert=copy_to_clipboard
+keybind = super+control+shift+alt+arrow_down=resize_split:down,100
+keybind = super+control+shift+alt+arrow_up=resize_split:up,100
+keybind = super+control+shift+alt+arrow_left=resize_split:left,100
+keybind = super+control+shift+alt+arrow_right=resize_split:right,100
 
 # Slowdown mouse scrolling
 mouse-scroll-multiplier = 0.95
+
