fix(hyprland): update brightness control commands for compatibility with amdgpu*

--- a/private_dot_config/hypr/custom/bindings.conf
+++ b/private_dot_config/hypr/custom/bindings.conf
@@ -2,8 +2,8 @@
 unbind = ,XF86MonBrightnessUp, Brightness up
 unbind = ,XF86MonBrightnessDown, Brightness down
 
-bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amdgpu_bl1 s +2%
-bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amdgpu_bl1 s 2%-
+bindeld = ,XF86MonBrightnessUp, Brightness up, exec, brightnessctl -d amdgpu* s +2%
+bindeld = ,XF86MonBrightnessDown, Brightness down, exec, brightnessctl -d amdgpu* s 2%-
 
 bindeld = ,XF86MonBrightnessUp, Brightness up, exec, $osdclient --brightness +2
 bindeld = ,XF86MonBrightnessDown, Brightness down, exec, $osdclient --brightness -2
